--- a/views/index.html
+++ b/views/index.html
@@ -25,7 +25,7 @@
       </div>
       <div class="footer">
         <p>
-          by <a href="https://www.freecodecamp.org">freeCodeCamp</a>
+          by <a href="https://karl95.is-a.dev">Karel Hernandez</a>
         </p>
       </div>
    </body>
